# Projects

./: .gitignore  README.md  et --hard 689b4d6
.devcontainer/: devcontainer.json
Agentic Ai/Documentation Generator/: README.md  app.py  plan.txt  project_plan.md  prompt.txt  pyproject.toml  requirements.txt  test.py
Agentic Ai/Documentation Generator/Agents/: agents.py  tools.py
Agentic Ai/Documentation Generator/Auth/: auth.py  auth_utils.py
Agentic Ai/Schedule_Gen-v1/: README.md  pyproject.toml  test.py
Agentic Ai/Schedule_Gen-v1/backend/: app.py  routes.py
Agentic Ai/Schedule_Gen-v1/core/: Schedule_generator.py  document_processor.py
Agentic Ai/Schedule_gen/: .gitignore  app.py  pyproject.toml  requirements.txt  test.py
Agentic Ai/Schedule_gen/Backend/: auth.py  utils.py
Agentic Ai/Schedule_gen/Frontend/Templates/: activity_history.html  chat.html  dashboard.html  logs.html  my_documents.html  scheduler.html
Agentic Ai/Schedule_gen/Frontend/scripts/css/: style.css
Agentic Ai/Simple document rag bot/: agents.py  pyproject.toml
Aipulsex Project Implementations/Project-2 (Clustering based data augmentation)/: Application.ipynb
Course_Recommendation_System/: README.md
Course_Recommendation_System/app/: __init__.py
Course_Recommendation_System/app/templates/: results.html
Document q&a Chatbot/: app.py  requirements.txt
Document qna Chatbot/: .env  requirements.txt
Document_qna_Chatbot/: README.md  app.py  database.db  database.py  main.py  pyproject.toml  requirements.txt
Documentation Generator/: README.md  app.py  pyproject.toml  requirementts.txt  server.py
Documentation Generator/utils/: utils.py
F1_Quali_Predictor/: pyproject.toml  requirements.txt
Gesture Volume Control/: README.md  hand_tracking_module.py  volume_control.py
Gesture mouse control/: README.md  hand_detector.py  mouse_control.py
Ml_Projects/Course_Recommendation_System/app/: app.py  preprocess.py  routes.py
Ml_Projects/Course_Recommendation_System/app/templates/: index.html
Music Genre Classification/: app.py
Neural Network from Scratch/: Neural_net.ipynb
Project Implementations/Project-1 (movie review classifier with gui)/: Movie_Review_Classifier.ipynb  Project-1 Changes.md
Project Implementations/Project-2 (Clustering based data augmentation)/: Changes.md
Project Implementations/Text Generation using rnn/frontend/: index.html
Review Sentiment Classifier/Comparisons/: model-comparison.ipynb  test-run.ipynb
Rnn Projects/Review Sentiment Classifier/: main.py  pyproject.toml  requirements.txt
StoryWeaver/: Train.ipynb  main.py  model_params.pickle  pyproject.toml  requirements.txt  story-weaver (1).ipynb  tokenizer.pickle
StoryWeaver/frontend/: index.html  script.js  style.css
Tumor Classification using cnn/: .gitattributes  Augmentation.ipynb  Custom_Implementation.ipynb  Custom_Model.ipynb  Image Preprocessing.py  Model_implementation.ipynb  README.md  Tumor_Classification.ipynb  requirements.txt
