[project]
name = "f1-quali-predictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.4",
    "dnspython>=2.7.0",
    "fastf1>=3.6.0",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "pymongo>=4.13.2",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "scikit-learn>=1.7.1",
]
