[project]
name = "storyweaver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kagglehub>=0.3.12",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "pymongo>=4.14.0",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.1",
    "tqdm>=4.67.1",
    "unidecode>=1.4.0",
]
