[project]
name = "simple-document-rag-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agno>=2.2.6",
    "google-genai>=1.48.0",
    "pinecone>=7.3.0",
    "pypdf>=6.1.3",
    "qdrant-client>=1.15.1",
    "streamlit>=1.51.0",
]
